Fix overlay to only cover image to allow overflow scroll buttons to be used on title.  Add transition effect.

--- a/TheatreCMS3/Content/Areas/Prod.css
+++ b/TheatreCMS3/Content/Areas/Prod.css
@@ -68,8 +68,13 @@
 
 /* PRODUCTIONS INDEX PAGE */
 
+.Production--cardImage {
+	position: relative;
+}
+
 .Production--cardOverlay {
 	opacity: 0;
+	transition: .5s ease;
 }
 
 .Production--cardOverlay:hover {
